--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!doctype html>
-<title>Temporarily relocated while github fixes its dns
-<script>
-window.location = "http://pomax.github.io/temp-blog" + window.location.pathname + window.location.search;
-</scsript>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Temporarily relocated while github fixes its dns</title>
+  </head>
+  <body>
+    <script>
+      window.location = "http://pomax.github.io/temp-blog" + window.location.pathname + window.location.search;
+    </scsript>
+  </body>
+</html>
