--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
     <script>
       window.location = "http://pomax.github.io/temp-blog" + window.location.pathname + window.location.search;
-    </scsript>
+    </script>
   </body>
 </html>
