--- a/index.html
+++ b/index.html
@@ -2,11 +2,98 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Temporarily relocated while github fixes its dns</title>
+    <title>Pomax.github.io</title>
+
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lustria">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Eagle+Lake">
+
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="gh-weblog/rss.xml">
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-69475841-1', 'auto');
+
+      // 1) general pageview count
+      ga('send', 'pageview');
+
+      // 2) also, if a specific page is being visited, which one?
+      var hash = window.location.hash;
+      if (!!hash) { ga('send','event','page','request',hash,{ nonInteraction: true }); }
+    </script>    
   </head>
   <body>
-    <script>
-      window.location = "http://pomax.github.io/temp-blog" + window.location.pathname + window.location.search;
+
+    <header>
+      <h1><a href="/">Pomax.github.io</a></h1>
+      <h2>Because chronicling the past using technology is kind of cool.</h2>
+      <h6>
+        <a class="tweet" href="http://twitter.com/TheRealPomax">
+          <img src="https://g.twimg.com/Twitter_logo_blue.png">
+        </a>
+        <a class="rss" href="gh-weblog/rss.xml">
+          <img src="//upload.wikimedia.org/wikipedia/en/4/43/Feed-icon.svg">
+        </a>
+      </h6>
+    </header>
+
+    <!-- Promise shim -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/es6-shim/0.22.2/es6-shim.min.js"></script>
+
+    <!-- my personal blog uses MathJax for maths typesetting. Add that in: -->
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+        displayAlign: "left",
+        displayIndent: "2em",
+        TeX: {
+          extensions: ["color.js"]
+        }
+      });
     </script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.3/MathJax.js?config=TeX-AMS_HTML"></script>
+    <script>
+      var MathJaxProcessor = function(element) {
+        // markdown turns ` into <code>, which we need to strip out again
+        var needsMathJax = false;
+        var codes = Array.prototype.slice.call(element.querySelectorAll("code"));
+        codes.forEach(function(codeElement) {4
+          var s = codeElement.innerHTML;
+          if(s.match(/^\\+\[/) && s.match(/\\+\]$/)) {
+            codeElement.outerHTML = s.replace(/\\\\/g,"\\");
+            needsMathJax = true;
+          }
+        });
+        if(needsMathJax) MathJax.Hub.Queue(["Typeset", MathJax.Hub, element]);
+      };
+    </script>
+
+    <!-- Github gh-pages weblog code: -->
+    <section id="gh-weblog-nav">
+      Loading post history links...
+    </section>
+
+    <section id="gh-weblog">
+      Loading mot recent posts...
+    </section>
+
+    <link rel="stylesheet" href="./gh-weblog/style.css">
+    <script>
+    var WebLogSettings = {
+      target:      "gh-weblog",
+      nav:         "gh-weblog-nav",
+      base:        "http://pomax.github.io",
+      title:       "Pomax.github.io",
+      description: "My blog on github",
+      rssfeeds:    "Mozilla",
+      processors:  [MathJaxProcessor]
+    };
+    </script>
+    <script src='./gh-weblog/gh-weblog.js'></script>
+
+
   </body>
 </html>
