--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Eagle+Lake">
 
-    <link rel="alternate" type="application/rss+xml" title="RSS" href="gh-weblog/rss.xml">
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="./gh-weblog-2/rss.xml">
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -35,7 +35,7 @@
         <a class="tweet" href="http://twitter.com/TheRealPomax">
           <img src="https://g.twimg.com/Twitter_logo_blue.png">
         </a>
-        <a class="rss" href="gh-weblog/rss.xml">
+        <a class="rss" href="./gh-weblog-2/rss.xml">
           <img src="//upload.wikimedia.org/wikipedia/en/4/43/Feed-icon.svg">
         </a>
       </h6>
@@ -80,7 +80,7 @@
       Loading mot recent posts...
     </section>
 
-    <link rel="stylesheet" href="./gh-weblog/style.css">
+    <link rel="stylesheet" href="./gh-weblog-2/style.css">
     <script>
     var WebLogSettings = {
       target:      "gh-weblog",
@@ -92,7 +92,7 @@
       processors:  [MathJaxProcessor]
     };
     </script>
-    <script src='./gh-weblog/gh-weblog.js'></script>
+    <script src='./gh-weblog-2/gh-weblog.js'></script>
 
 
   </body>
