--- a/index.html
+++ b/index.html
@@ -76,14 +76,15 @@
       Loading post history links...
     </section>
 
-    <section id="gh-weblog-2">
+    <section id="gh-weblog">
       Loading mot recent posts...
     </section>
 
     <link rel="stylesheet" href="./gh-weblog-2/style.css">
     <script>
     var WebLogSettings = {
-      target:      "gh-weblog-2",
+      target:      "gh-weblog",
+      path:        "gh-weblog-2",
       nav:         "gh-weblog-nav",
       base:        "http://pomax.github.io",
       title:       "Pomax.github.io",
