--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       processors:  [MathJaxProcessor]
     };
     </script>
-    <script src='./gh-weblog-2/gh-weblog.js'></script>
+    <script src='./gh-weblog-2enriched.js'></script>
 
 
   </body>
