--- a/index.html
+++ b/index.html
@@ -83,8 +83,11 @@
     <link rel="stylesheet" href="./gh-weblog-2/style.css">
     <script>
     var WebLogSettings = {
-      target:      "gh-weblog",
+      // thanks, github
       path:        "gh-weblog-2",
+      contentPath: "gh-weblog-2",
+      // normal values
+      target:      "gh-weblog",
       nav:         "gh-weblog-nav",
       base:        "http://pomax.github.io",
       title:       "Pomax.github.io",
