--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
       processors:  [MathJaxProcessor]
     };
     </script>
+    <!--
     <script src='./gh-weblog-2/enriched.js'></script>
+    -->
+    <script src='./gh-weblog-2/gh-weblog.js'></script>
 
 
   </body>
