--- a/index.html
+++ b/index.html
@@ -3,28 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Pomax.github.io</title>
-
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lustria">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Eagle+Lake">
-
     <link rel="alternate" type="application/rss+xml" title="RSS" href="./gh-weblog-2/rss.xml">
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-69475841-1', 'auto');
-
-      // 1) general pageview count
-      ga('send', 'pageview');
-
-      // 2) also, if a specific page is being visited, which one?
-      var hash = window.location.hash;
-      if (!!hash) { ga('send','event','page','request',hash,{ nonInteraction: true }); }
-    </script>    
+    <script src="ga.js"></script>
   </head>
   <body>
 
@@ -54,22 +38,21 @@
         }
       });
     </script>
+
     <script src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.3/MathJax.js?config=TeX-AMS_HTML"></script>
-    <script>
-      var MathJaxProcessor = function(element) {
-        // markdown turns ` into <code>, which we need to strip out again
-        var needsMathJax = false;
-        var codes = Array.prototype.slice.call(element.querySelectorAll("code"));
-        codes.forEach(function(codeElement) {4
-          var s = codeElement.innerHTML;
-          if(s.match(/^\\+\[/) && s.match(/\\+\]$/)) {
-            codeElement.outerHTML = s.replace(/\\\\/g,"\\");
-            needsMathJax = true;
-          }
-        });
-        if(needsMathJax) MathJax.Hub.Queue(["Typeset", MathJax.Hub, element]);
-      };
-    </script>
+
+    <script src="mj.js"></script>
+
+    <section id="projects">
+      <ul>
+        <li><a href="https://pomax.github.io/bezierinfo">A Primer on Bézier Curves</a></li>
+        <li><a href="https://pomax.github.io/bezierjs/">A Bezier.js library</a></li>
+        <li><a href="http://www.nihongoresources.com">Nihongo Resources</a></li>
+        <li><a href="https://github.com/Pomax?tab=repositories">Github Repositories</a></li>
+        <li><a href="https://www.npmjs.com/~pomax">My npmjs profile</a></li>
+        <li><a href="https://twitter.com/TheRealPomax">My twitter stream</a></li>
+      </ul>
+    </section>
 
     <!-- Github gh-pages weblog code: -->
     <section id="gh-weblog-nav">
@@ -81,26 +64,7 @@
     </section>
 
     <link rel="stylesheet" href="./gh-weblog-2/style.css">
-    <script>
-    var WebLogSettings = {
-      // thanks, github
-      path:        "gh-weblog-2",
-      contentPath: "gh-weblog-2",
-      // normal values
-      target:      "gh-weblog",
-      nav:         "gh-weblog-nav",
-      base:        "http://pomax.github.io",
-      title:       "Pomax.github.io",
-      description: "My blog on github",
-      rssfeeds:    "Mozilla",
-      processors:  [MathJaxProcessor]
-    };
-    </script>
-    <!--
-    <script src='./gh-weblog-2/enriched.js'></script>
-    -->
+    <script src="settings.js"></script>
     <script src='./gh-weblog-2/gh-weblog.js'></script>
-
-
   </body>
 </html>
