--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h2>Because chronicling the past using technology is kind of cool.</h2>
       <h6>
         <a class="tweet" href="http://twitter.com/TheRealPomax">
-          <img src="https://g.twimg.com/Twitter_logo_blue.png">
+          <img src="/gh-weblog-2/images/Twitter_logo_blue.png">
         </a>
         <a class="rss" href="./gh-weblog-2/rss.xml">
           <img src="//upload.wikimedia.org/wikipedia/en/4/43/Feed-icon.svg">
