--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h2>Because chronicling the past using technology is kind of cool.</h2>
       <h6>
         <a class="tweet" href="http://twitter.com/TheRealPomax">
-          <img src="./gh-weblog-2/images/twitter_logo_blue.png">
+          <img src="//upload.wikimedia.org/wikipedia/de/9/9f/Twitter_bird_logo_2012.svg">
         </a>
         <a class="rss" href="./gh-weblog-2/rss.xml">
           <img src="//upload.wikimedia.org/wikipedia/en/4/43/Feed-icon.svg">
