--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lustria">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Eagle+Lake">
-    <link rel="alternate" type="application/rss+xml" title="RSS" href="./gh-weblog-2/rss.xml">
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="/gh-weblog-2/rss.xml">
     <script src="ga.js"></script>
   </head>
   <body>
