--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
 
     <link rel="stylesheet" href="./gh-weblog-2/style.css">
     <script src="settings.js"></script>
-    <script src='./gh-weblog-2/gh-weblog.js'></script>
+    <script src='/gh-weblog-2/gh-weblog.js'></script>
   </body>
 </html>
