--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Eagle+Lake">
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/gh-weblog-2/rss.xml">
-    <script src="ga.js"></script>
+    <script src="ga.js" async defer></script>
   </head>
   <body>
 
@@ -16,10 +16,10 @@
       <h1><a href="/">Pomax.github.io</a></h1>
       <h2>Because chronicling the past using technology is kind of cool.</h2>
       <h6>
-        <a class="tweet" href="http://twitter.com/TheRealPomax">
-          <img src="//upload.wikimedia.org/wikipedia/commons/4/4f/Twitter-logo.svg">
+        <a href="http://mastodon.social/@TheRealPomax">
+          <img src="gh-weblog-2/images/logo-purple.svg">
         </a>
-        <a class="rss" href="./gh-weblog-2/rss.xml">
+        <a href="./gh-weblog-2/rss.xml">
           <img src="//upload.wikimedia.org/wikipedia/en/4/43/Feed-icon.svg">
         </a>
       </h6>
