--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <li><a href="http://www.nihongoresources.com">Nihongo Resources</a></li>
         <li><a href="https://github.com/Pomax?tab=repositories">Github Repositories</a></li>
         <li><a href="https://www.npmjs.com/~pomax">My npmjs profile</a></li>
-        <li><a href="https://twitter.com/TheRealPomax">My twitter stream</a></li>
+        <li><a href="https://mastodon.social/@TheRealPomax">My twitter stream</a></li>
       </ul>
     </section>
 
