--- a/index.html
+++ b/index.html
@@ -1,44 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Pomax.github.io</title>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Lustria"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Lato"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Eagle+Lake"
-    />
-    <link
-      rel="alternate"
-      type="application/rss+xml"
-      title="RSS"
-      href="/gh-weblog-2/rss.xml"
-    />
+    <link rel="stylesheet" href="./gh-weblog-2/style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lustria">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Eagle+Lake">
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="/gh-weblog-2/rss.xml">
     <script src="ga.js" async defer></script>
-
-    <link rel="stylesheet" href="./gh-weblog-2/style.css" />
-    <link rel="stylesheet" href="style.css" />
-    <script src="settings.js"></script>
-    <script src="/gh-weblog-2/gh-weblog.js" async defer></script>
   </head>
-
   <body>
+
     <header>
       <h1><a href="/">Pomax.github.io</a></h1>
       <h2>Because chronicling the past using technology is kind of cool.</h2>
       <h6>
         <a href="http://mastodon.social/@TheRealPomax">
-          <img src="gh-weblog-2/images/logo-purple.svg" />
+          <img src="gh-weblog-2/images/logo-purple.svg">
         </a>
         <a href="./gh-weblog-2/rss.xml">
-          <img src="//upload.wikimedia.org/wikipedia/en/4/43/Feed-icon.svg" />
+          <img src="//upload.wikimedia.org/wikipedia/en/4/43/Feed-icon.svg">
         </a>
       </h6>
     </header>
@@ -63,30 +46,25 @@
 
     <section id="projects">
       <ul>
-        <li>
-          <a href="https://pomax.github.io/bezierinfo"
-            >A Primer on Bézier Curves</a
-          >
-        </li>
-        <li>
-          <a href="https://pomax.github.io/bezierjs/">A Bezier.js library</a>
-        </li>
+        <li><a href="https://pomax.github.io/bezierinfo">A Primer on Bézier Curves</a></li>
+        <li><a href="https://pomax.github.io/bezierjs/">A Bezier.js library</a></li>
         <li><a href="http://www.nihongoresources.com">Nihongo Resources</a></li>
-        <li>
-          <a href="https://github.com/Pomax?tab=repositories"
-            >Github Repositories</a
-          >
-        </li>
+        <li><a href="https://github.com/Pomax?tab=repositories">Github Repositories</a></li>
         <li><a href="https://www.npmjs.com/~pomax">My npmjs profile</a></li>
-        <li>
-          <a href="https://mastodon.social/@TheRealPomax">My twitter stream</a>
-        </li>
+        <li><a href="https://mastodon.social/@TheRealPomax">My twitter stream</a></li>
       </ul>
     </section>
 
     <!-- Github gh-pages weblog code: -->
-    <section id="gh-weblog-nav">Loading post history links...</section>
+    <section id="gh-weblog-nav">
+      Loading post history links...
+    </section>
 
-    <section id="gh-weblog">Loading mot recent posts...</section>
+    <section id="gh-weblog">
+      Loading mot recent posts...
+    </section>
+
+    <script src="settings.js"></script>
+    <script src='/gh-weblog-2/gh-weblog.js'></script>
   </body>
 </html>
