Saving static redirect page

--- a/pages/1728925663194/updating-my-blog-platform/index.html
+++ b/pages/1728925663194/updating-my-blog-platform/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=../../../index.html?postid=1728925663194">
+<title># Updating my blog platform</title><meta http-equiv="refresh" content="0; url=../../../index.html?postid=1728925663194">
