--- a/index.html
+++ b/index.html
@@ -83,5 +83,12 @@
 
     <!-- wtf, chrome? Why do you not honour the "defer" attribute? -->
     <script src="gh-weblog/dist/gh-weblog.js" async defer></script>
+
+    <noscript>
+      Please enable JavaScript, this isn't a "generated static site", it's a CMS
+      running on top of gh-pages. JavaScript is baseline-required here. That
+      said, feel free to block anything that isn't on pomax.github.io of course:
+      as long as first-party JS is allowed, my blog will work fine.
+    </noscript>
   </body>
 </html>
